fixed an issue with part 1

--- a/part_1/index.html
+++ b/part_1/index.html
@@ -62,9 +62,9 @@
       Red
       <input id="red" class="form-control" type="number" min="0" max="255" value="255">
     </div>
-    <div id="blue" class="col-sm-4">
+    <div class="col-sm-4">
       Blue
-      <input class="form-control" type="number" min="0" max="255" value="255">
+      <input id="blue" class="form-control" type="number" min="0" max="255" value="255">
     </div>
     <div class="col-sm-4">
       Green
